feat: enrich store details with parking, take-out, and local currency benefits